# casapp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  middleware.ts  next.config.ts  package-lock.json  package.json
.github/instructions/: portfolio.instructions.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/api/properties/: route.ts
app/calendar/: page.tsx
app/components/: ConfirmDialog.tsx  FinancialReportPDF.tsx  PropertyMap.tsx  UndoBanner.tsx
app/lib/: authOptions.ts  calculations.ts  mockData.ts  performance.ts  store.ts  types.ts
app/login/: page.tsx
app/properties/: page.tsx
app/properties/[id]/: page.tsx
app/register/: page.tsx
backend/: Dockerfile  Makefile  entrypoint.sh  gunicorn.conf.py  pyproject.toml  pytest.ini
backend/apps/accounts/tests/: test_jwt.py
backend/apps/assets/: models.py  serializers.py  urls.py  views.py
backend/apps/assets/migrations/: 0001_initial.py
backend/apps/assets/tests/: test_assets_api.py  test_documents_and_models.py  test_misc_and_permissions.py  test_performance_and_admin.py
backend/config/: settings.py  urls.py
deploy/: Caddyfile.example
frontend/: Dockerfile  jest.config.ts  next.config.js  package.json  tsconfig.json
frontend/src/__tests__/: _app.test.tsx  home.test.tsx
frontend/src/pages/: index.tsx
prisma/: schema.prisma
prisma/migrations/20250904145150_init/: migration.sql
prisma/migrations/20250904173756_add_property_documents/: migration.sql
types/: next-auth.d.ts
(+10 files in other folders)
